# atrium

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/analysis/: 2026-07-11-macos-unified-editor-design.md
patches/: @replit+codemirror-minimap+0.5.2.patch
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  fs_watch.rs  link_resolve.rs  macos_dock.rs  main.rs  pty_manager.rs  recents.rs  state.rs
src-tauri/src/commands/: app.rs  fs.rs  mod.rs  pty.rs  search.rs  shell.rs  workspace.rs
src-tauri/src/workspace/: local.rs  mod.rs
src/styles/: app.css  markdown.css
tests/e2e/: README.md  package.json  wdio.conf.js
tests/frontend/: AnchorContextMenuHost.svelte  App.editorSplitPanes.test.ts  App.terminalAutoSpawn.test.ts  App.terminalAutoSpawnDeliberateExit.test.ts  App.terminalAutoSpawnLoop.test.ts  App.terminalOsDrop.test.ts  ContextMenu.test.ts  ContextMenuHost.svelte  DockSettingsMenu.test.ts  Dropdown.test.ts  EditorPane.activation.test.ts  EditorPane.cursorPosition.test.ts  EditorPane.lineWrapping.test.ts  EditorPane.minimap.test.ts  EditorPane.saveOwnership.test.ts  EditorPane.viewMode.test.ts  EditorPaneContextMenu.test.ts  EditorPaneSplit.test.ts  EditorPaneStub.svelte  EditorPaneTableContextMenu.test.ts  EditorPanel.test.ts  EditorPanelStub.svelte  ErrorToast.test.ts  ExitingTerminalPaneStub.svelte  FileTreeContextMenu.test.ts  FileTreeExplorerImport.test.ts  (+66 more)
(+88 files in other folders)
