[package]
name = "atrium"
version = "0.1.0"
description = "Atrium: a unified markdown editor, code editor, file explorer, and terminal for macOS"
authors = ["Atrium contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
async-trait = "0.1"
portable-pty = "0.8"
notify = "6"
notify-debouncer-full = "0.3"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
thiserror = "1"
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
memchr = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSDocumentController", "NSMenu", "NSMenuItem", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSURL"] }

[dev-dependencies]
tempfile = "3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
